# Push_swap

./: CMakeLists.txt  Makefile  array_actions.c  atoi_push_swap.c  big_sort.c  checker  create_storage.c  do_operatioms_2_part.c  do_operations.c  do_operations_1_part.c  do_operations_2_part.c  do_operations_3_part.c  file  file.txt  fill_stack_a.c  free_storage.c  ft  ft_atoi.c  little_sort.c  main.c  min_value_stack.c  operation_push.c  operation_reverse_rotate.c  operation_rotate.c  operation_swap.c  operations.c  push_swap  push_swap.h  result_actions.c  review.c  sort_2_3_4_5_elems.c  sort_on_array.c  stack.c  stack_utils.c  stack_utils_1_part.c  stack_utils_2_part.c  start_sort.c
Libft/: Makefile  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h
bonus/: OK_actions.c  OK_actions_bonus.c  atoi_push_swap.c  atoi_push_swap_bonus.c  create_storage.c  create_storage_bonus.c  do_operations_1_part_bonus.c  do_operations_2_part_bonus.c  do_operations_3_part_bonus.c  fill_stack_a.c  fill_stack_a_bonus.c  free_storage.c  free_storage_bonus.c  ft  ft_isdigit_bonus.c  ft_memcmp_bonus.c  ft_putstr_fd_bonus.c  ft_strchr_bonus.c  ft_strdup_bonus.c  ft_strjoin_bonus.c  ft_strlen_bonus.c  ft_substr_bonus.c  get_next_line_bonus.c  get_number_of_operations.c  main.c  ok_actions_bonus.c  push_swap_bonus.h  read_instructions.c  read_instructions_bonus.c  review.c  review_bonus.c  stack_utils_1_part.c  stack_utils_1_part_bonus.c  (+1 more)
(+51 files in other folders)
